--- a/style.css
+++ b/style.css
@@ -4,21 +4,71 @@ header, footer{
     margin: auto;
 }
 
+h1{
+    text-align: center;
+}
+
 h2{
     font-size: 28px;
 }
 
-nav{
+.nav{
+    background-color: black;
+    overflow: hidden;
+}
+
+.nav a{
+    float: right;
+    color: white;
+    text-align: center;
+    padding: 15px 20px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.nav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+  
+.nav a.active {
+    background-color: wheat;
+    color: black;
+}
+
+.category h2{
+    font-size: 25px;
+}
+
+.category h2 a{
+    color: black;
+    border-bottom: 2px solid wheat;
+    padding: 10px 15px;
+    text-decoration: none;
+}
+
+
+
+/* nav{
+    padding: auto;
+    height: 30px;
     text-align: right;
 }
 
-li{
-    font-size: 18px;
-    display: inline;
-    margin: 10px;
+nav ul{
+    background-color: black;
+    height: ;
 }
 
-.logo{
+nav li{
+    margin:15px;
+    font-size: 20px;
+    display: inline;
+} */
+
+
+
+#logo{
     width: 200px;
 }
 
@@ -26,7 +76,7 @@ li{
     width: 250px;
     height: 380px;
     margin: 50px;
-    box-shadow: 5px 5px #d9d9d9;
+    box-shadow: 10px 10px #d9d9d9;
     border: 1px solid black
 
 }
@@ -35,4 +85,14 @@ li{
     width: 75%;
     margin: auto;
     text-align: center;
+}
+
+form{
+    height:500px;
+    margin: auto;
+    width: 30%;
+}
+
+form div{
+    margin: 10px
 }
